--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -54,15 +54,15 @@
 								                	<div class='cell'>
 												        <div class="container">
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.tactual}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.tactual | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Actual</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.ttarget}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.ttarget | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Target</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Balance</div></div>
 												            </div>
 												        </div>
@@ -105,15 +105,15 @@
 								                	<div class='cell'>
 												        <div class="container">
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.tactual}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.tactual | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Actual</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.ttarget}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.ttarget | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Target</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Balance</div></div>
 												            </div>
 												        </div>
@@ -156,15 +156,15 @@
 								                	<div class='cell'>
 												        <div class="container">
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.tactual}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.tactual | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Actual</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.ttarget}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.ttarget | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Target</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance}}</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance | number}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Balance</div></div>
 												            </div>
 												        </div>
