--- a/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="item-container" (click)="gotoAnotherPageHC()">
+    <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
             <div class='cell width-10 padding-left-5'><div class="sequence blue-smart">3</div></div>
             <div class='cell'>
