--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -36,7 +36,7 @@
 		        <div class="container">
 		        	<div class='cell width-20 targets-{{eachCat.category_name|lowercase}}'></div>
 		            <div class='cell'>
-		                <div class='container'><div class='cell width-80 green'>{{eachCat.category_name}}</div></div>
+		                <div class='container'><div class='cell width-80 green large'>{{eachCat.category_name}}</div></div>
 		            </div>
 		        </div>
 		    </div>
@@ -87,7 +87,7 @@
 		        <div class="container">
 		        	<div class='cell width-20 targets-{{eachCat.category_name|lowercase}}'></div>
 		            <div class='cell'>
-		                <div class='container'><div class='cell width-80 green'>{{eachCat.category_name}}</div></div>
+		                <div class='container'><div class='cell width-80 green large'>{{eachCat.category_name}}</div></div>
 		            </div>
 		        </div>
 		    </div>
@@ -138,7 +138,7 @@
 		        <div class="container">
 		        	<div class='cell width-20 targets-{{eachCat.category_name|lowercase}}'></div>
 		            <div class='cell'>
-		                <div class='container'><div class='cell width-80 green'>{{eachCat.category_name}}</div></div>
+		                <div class='container'><div class='cell width-80 green large'>{{eachCat.category_name}}</div></div>
 		            </div>
 		        </div>
 		    </div>
