--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -13,10 +13,7 @@
 
     <div class="menu-header">
         <div class="header-container">
-            <div class="header-cell pic">
-                <!--<input type="file" />-->
-                <img src="/img/Transparent.gif" class="menu-pic" id="menuPic" (click)="takepic()"/>
-            </div>
+            <div class="header-cell pic" (click)="takepic()"></div>
             <div class="header-cell">
                 <div class="header-container">
                     <div class="header-cell text" id='username-dashboard'>Tamara Josh</div>
