--- a/src/app/app/basic-call-procedure/components/confirm-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/confirm-collection.component.html
@@ -113,7 +113,7 @@
 
 			  	
 
-                <div class="item-container">
+                <div class="padding-top-2 padding-bottom-2">
 			        <div class='container'>
 			            <div class='cell'>			              
 			                <div class='container'>
@@ -122,10 +122,10 @@
 					                    <div class='cell'>
 					                        <div class="container">
 					                            <div class='cell'>
-					                                <div class='container'><div class='cell width-50 padding-left-5'>Collection</div></div>
+					                                <div class='container'><div class='cell width-30 padding-left-5'>Collection</div></div>
 					                            </div>
 					                            <div class='cell'>					                                
-					                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-50 input-peso" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?" value="500"/></div></div>
+					                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-70 input-peso" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?" value="500"/></div></div>
 					                            </div>
 					                        </div>
 					                    </div>
@@ -203,7 +203,7 @@
 
 			  	
 
-                <div class="item-container">
+                <div class="padding-top-2 padding-bottom-2">
 			        <div class='container'>
 			            <div class='cell'>			              
 			                <div class='container'>
@@ -212,10 +212,10 @@
 					                    <div class='cell'>
 					                        <div class="container">
 					                            <div class='cell'>
-					                                <div class='container'><div class='cell width-50 padding-left-5'>Collection</div></div>
+					                                <div class='container'><div class='cell width-30 padding-left-5'>Collection</div></div>
 					                            </div>
 					                            <div class='cell'>					                                
-					                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-50 input-peso" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?" value="500"/></div></div>
+					                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-70 input-peso" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?" value="500"/></div></div>
 					                            </div>
 					                        </div>
 					                    </div>
@@ -292,7 +292,7 @@
 
 			  	
 
-                <div class="item-container">
+                <div class="padding-top-2 padding-bottom-2">
 			        <div class='container'>
 			            <div class='cell'>			              
 			                <div class='container'>
@@ -301,10 +301,10 @@
 					                    <div class='cell'>
 					                        <div class="container">
 					                            <div class='cell'>
-					                                <div class='container'><div class='cell width-50 padding-left-5'>Collection</div></div>
+					                                <div class='container'><div class='cell width-30 padding-left-5'>Collection</div></div>
 					                            </div>
 					                            <div class='cell'>					                                
-					                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-50 input-peso" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?" value="0"/></div></div>
+					                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-70 input-peso" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?" value="0"/></div></div>
 					                            </div>
 					                        </div>
 					                    </div>
