--- a/src/app/app/my-transaction/components/hc-targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/hc-targets-actuals.component.html
@@ -35,7 +35,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-sim'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>Airtime</div></div>
+	                <div class='container'><div class='cell width-80 green large'>Airtime</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -70,14 +70,14 @@
 						</div>
 					</div>
 	            </div>
-	            <div class='cell width-30'><div class="progress-radial progress-23"><div class="overlay">23.33<sup>%</sup></div></div></div>
+	            <div class='cell width-30'><div class="progress-radial progress-23"><div class="overlay">23<sup>%</sup></div></div></div>
 	        </div>
 	    </div>
 		<div class="item-container">
 	        <div class="container">
 	        	<div class='cell width-20 targets-broadband'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>Broadband</div></div>
+	                <div class='container'><div class='cell width-80 green large'>Broadband</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -119,7 +119,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-sim'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>SIM</div></div>
+	                <div class='container'><div class='cell width-80 green large'>SIM</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -164,7 +164,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-sim'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>Airtime</div></div>
+	                <div class='container'><div class='cell width-80 green large'>Airtime</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -240,7 +240,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-broadband'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>Broadband</div></div>
+	                <div class='container'><div class='cell width-80 green large'>Broadband</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -275,14 +275,14 @@
 						</div>
 					</div>
 	            </div>
-	            <div class='cell width-30'><div class="progress-radial progress-63"><div class="overlay">63.38<sup>%</sup></div></div></div>
+	            <div class='cell width-30'><div class="progress-radial progress-63"><div class="overlay">63<sup>%</sup></div></div></div>
 	        </div>
 	    </div>
 		<div class="item-container">
 	        <div class="container">
 	        	<div class='cell width-20 targets-sim'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>SIM</div></div>
+	                <div class='container'><div class='cell width-80 green large'>SIM</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -317,7 +317,7 @@
 						</div>
 					</div>
 	            </div>
-	            <div class='cell width-30'><div class="progress-radial progress-65"><div class="overlay">65.3<sup>%</sup></div></div></div>
+	            <div class='cell width-30'><div class="progress-radial progress-65"><div class="overlay">65<sup>%</sup></div></div></div>
 	        </div>
 	    </div>
 	</div>
@@ -327,7 +327,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-sim'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>Airtime</div></div>
+	                <div class='container'><div class='cell width-80 green large'>Airtime</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -335,7 +335,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-broadband'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>Broadband</div></div>
+	                <div class='container'><div class='cell width-80 green large'>Broadband</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -343,7 +343,7 @@
 	        <div class="container">
 	        	<div class='cell width-20 targets-sim'></div>
 	            <div class='cell'>
-	                <div class='container'><div class='cell width-80 green'>SIM</div></div>
+	                <div class='container'><div class='cell width-80 green large'>SIM</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -378,7 +378,7 @@
 						</div>
 					</div>
 	            </div>
-	            <div class='cell width-30'><div class="progress-radial progress-137"><div class="overlay">137.5<sup>%</sup></div></div></div>
+	            <div class='cell width-30'><div class="progress-radial progress-137"><div class="overlay">137<sup>%</sup></div></div></div>
 	        </div>
 	    </div>
 	</div>
