--- a/src/app/scss/_mpin.scss
+++ b/src/app/scss/_mpin.scss
@@ -17,16 +17,16 @@ $container-mpin-height: 100%;
             }
 
     ::-webkit-input-placeholder {
-		color:    #FFF;
+		color:    $white;
 	}
 	:-moz-placeholder {
-		color:    #FFF;
+		color:    $white;
 	}
 	::-moz-placeholder {
-		color:    #FFF;
+		color:    $white;
 	}
 	:-ms-input-placeholder {
-		color:    #FFF;
+		color:    $white;
 	}
 
 	.smart-logo
@@ -51,7 +51,7 @@ $container-mpin-height: 100%;
 		max-width : 80%;
 		margin: 20vw auto -3vw;
 		.header {
-			color: #FFF;
+			color: $white;
 			font-size: 10vw;
 			line-height: 5vw;
 			margin-bottom: 10vw;
@@ -60,7 +60,7 @@ $container-mpin-height: 100%;
 		}
 
 		.mpin-title{
-			color: #FFF;
+			color: $white;
 			font-size: 5vw;
 			line-height: 12vw;
 			text-align: center;
@@ -68,7 +68,7 @@ $container-mpin-height: 100%;
 		}
 
 		.mpin-message{
-			color: #FFF;
+			color: $white;
 			clear: both;
 	        margin-right: 4vw;
 	        margin-left: 4vw;
@@ -81,7 +81,6 @@ $container-mpin-height: 100%;
 			clear: both;
 			display: inline-flex;
 			width: 100%;
-			
 			margin: 0% 0% 3% 0%;
 		       .mpin-field-item {
 			        // float: left;
@@ -90,7 +89,7 @@ $container-mpin-height: 100%;
 			        line-height: 12vw;
 			        font-size: 4vw;
     				font-weight: bold;
-			        color: #FFF;
+			        color: $white;
       			}
       .last-child {
           margin-right: 0 !important;
@@ -105,11 +104,12 @@ $container-mpin-height: 100%;
 	        font-style: italic;
 	        font-weight: 600;
 	       	color: $white;
+			border-radius: 5px;
       }
 		}
 
 		a {
-			color: #FFF;
+			color: $white;
 			//text-decoration: underline;
 			cursor: pointer;
 			padding:2%;
@@ -126,9 +126,10 @@ $container-mpin-height: 100%;
 			background-color: $apple;
 			text-align: center;
 			vertical-align: center;
-			padding: 3% 0% 3% 0%;
-			font-size: 4vw;
-    		color : #FFF;
+			padding: 3vw;
+			font-size: 5vw;
+    		color : $white;
+			border-radius: 5px;
 		}
 		.submit-button:active{
 			background-color: #33c68d;
