--- a/src/app/app/basic-call-procedure/components/hc-add-edit-load-transfer.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-add-edit-load-transfer.component.html
@@ -69,8 +69,8 @@
     </div>
 
     <div class='no-divider'>
-        <div class='button' id='save'>
-            <div class='button-identifier' (click)="addLoadTransferHC()">CONFIRM</div>
+        <div class='button' id='save' (click)='addLoadTransferHC()'>
+            <div class='button-identifier'>CONFIRM</div>
         </div>
     </div>
 </div>    
